tests/Tuc/Fixtures/errors/DataReadWithoutACaller.tuc
tuc parse error test
participants
    [PersonDatabase] parts

[PersonDatabase] -> Person
